<resources>
    <string name="app_name">스트레스 자가 진단</string>

    <!-- API urls -->
    <!--    <string name="api_base_url" translatable="false">http://20.0.0.65:80/api/</string>-->
    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>

    <!-- Room -->
    <string name="room_db_name" translatable="false">app-database</string>

    <!-- Auth page details -->
    <string name="full_name">이름</string>
    <string name="date_of_birth">생년월일</string>
    <string name="dummy_name" translatable="false">홍길동</string>
    <string name="date_of_birth_format" translatable="false">YYYYMMDD</string>

    <string name="permissions_toast">필요한 권한을 부여하십시오!</string>

    <string name="frequency0">전혀 그렇지 않다 / strongly disagree</string>
    <string name="frequency1">그렇지 않다 / disagree </string>
    <string name="frequency2">보통이다 / neither agree nor disagree</string>
    <string name="frequency3">그렇다 / agree</string>
    <string name="frequency4">매우 그렇다 / strongly agree</string>
    <string name="na">N/A</string>

    <string name="stresslvl0">스트레스를 전혀 받지 않았다 / Not stressed at all</string>
    <string name="stresslvl1">스트레스를 별로 받지 않았다 / Slightly stressed</string>
    <string name="stresslvl2">스트레스를 조금 받았다 / Moderately stressed</string>
    <string name="stresslvl3">스트레스를 많이 받았다 / Very stressed</string>
    <string name="stresslvl4">스트레스를 매우 많이 받았다 / Extremely stressed</string>

    <string name="socialsettings_asocial">👤 비사교적 (누군가와 소통할 가능성이 없는) / Asocial (not likely to communicate with anyone)</string>
    <string name="socialsettings_social">👥 사교적 (누군가와 소통할 가능성이 있거나 이미 소통하고 있는) / Social (likely to or already communicating with someone)</string>

    <string name="location_home">🏠 집 (집, 기숙사 등) / Home (home, dorm)</string>
    <string name="location_work">🏢 직장 (연구실, 사무실 등) / Work (lab, office)</string>
    <string name="location_restaurant">🍽️ 식당 (음식점, 카페, 술집 등) / Restaurant (restaurant, cafe, bar)</string>
    <string name="location_vehicle">🚗🚌 이동 수단 (자동차, 택시, 버스, 지하철 등) / Vehicle (car, taxi, bus, train)</string>
    <string name="location_other">기타 (영화관, 호텔 등) / Other (cinema, hotel)</string>

    <string name="activity_working">📚 공부/일 (과제, 연구실 업무 등) / Studying/working (doing assignment, lab work)</string>
    <string name="activity_sleeping">😴 수면 (침대에서 취침, 낮잠 등) / Sleeping (sleeping in bed, taking a nap)</string>
    <string name="activity_resting">🧘 휴식 (침대에서 휴식, 스마트폰 사용 등) / Relaxing (chilling in bed, using smartphone)</string>
    <string name="activity_watching">🎦 비디오 시청 (유튜브 시청, TV 시청 등) / Video watching (watching Youtube, watching TV)</string>
    <string name="activity_class">👩‍🏫 수업/회의 (회의 참석, 수업 수강 등) / Class/meeting (having a meeting, taking a class)</string>
    <string name="activity_eating">🍽️☕️ 식사 그리고/또는 음료 섭취 (점심, 저녁, 커피 등) / Eating and/or drinking (lunch/dining, drinking coffee)</string>
    <string name="activity_gaming">🎮 게임 (PC 게임, 모바일 게임 등) / Gaming (playing PC game, mobile game)</string>
    <string name="activity_conversing">👥 대화 (가족과의 대화, 친구와의 수다 등) / Conversing (chatting with family, talking with a friend)</string>
    <string name="activity_goingbed">🛏️ 취침 준비 (취침 준비 등) / Getting ready for bed (getting ready for bed)</string>
    <string name="activity_calling">💬 전화/문자 (전화 통화, 온라인 채팅 등) / Calling/texting (making phone call, online chatting)</string>
    <string name="activity_justwokeup">⏰ 잠에서 깬 직후 (침대에서 막 눈을 뜬 상황 등) / Right after waking up (just opened eyes in bed)</string>
    <string name="activity_driving">🚲🚗 운전 (자동차 운전, 자전거 타기 등) Driving (driving a car, riding a bicycle)</string>
    <string name="activity_other">기타 (머리 깎기, 내시경 검사 받기 등) / Other (getting haircut, getting an endoscopy)</string>

    <string name="q1_pss_control">1. How often have you felt that you were unable to control the important things?</string>
    <string name="q2_pss_confident">2. How often have you felt confident about your ability to handle problems?</string>
    <string name="q3_pss_yourway">3. How often did you feel that things were going your way?</string>
    <string name="q4_pss_difficulties">4. How often did you feel that difficulties were piling up so high that you could not overcome them?</string>
    <string name="q5_likert_stresslvl">5. Please rate your current perceived stress level.</string>
    <string name="q6_context_socialsettings">6. Please report your current social settings.</string>
    <string name="q7_context_location">7. Please report your current location.</string>
    <string name="q8_context_activity">8. Please report your current activity.</string>
    <string name="submit">제출</string>

    <string name="sign_in">로그인</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_in_success">로그인 성공</string>
    <string name="sign_up_success">회원가입 성공! 로그인 바랍니다.</string>
    <string name="sign_in_failure">로그인 실패, 다시 시도해주시길 바랍니다.</string>
    <string name="sign_up_failure">회원가입 실패, 다시 시도해주시길 바랍니다.</string>

    <string name="push_title">Stress report time!</string>
    <string name="push_prompt">현재 상황과 스트레스 상태에 대해서 설문해주시길 바랍니다.</string>
    <string name="email">이메일</string>
    <string name="example_email_com" translatable="false">example@email.com</string>
    <string name="gender">성별</string>
    <string name="fix_date_toast">날짜 형식을 확인해주세요! (YYYMMDD)</string>
    <string name="password">비밀번호</string>
    <string name="dummy_password_hint" translatable="false">***</string>
    <string name="repeat_password">비밀번호 재확인</string>
    <string name="passwords_dont_match">비밀번호가 일치하지 않습니다.</string>
    <string name="no_account_prompt">계정이 없으신가요?</string>
    <string name="yes_account_prompt">계정이 이미 있으시면</string>
    <string name="ema_top_hint">(Q1–5) 최근 1–2 시간에 느꼈던 감정이나 생각을 평가해주세요.</string>

    <string-array name="gender_options" translatable="false">
        <item>남자</item>
        <item>여자</item>
    </string-array>
</resources>