<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/q7_context_location"
        android:textColor="@color/black"
        android:textSize="@dimen/ema_question_textsize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/ema_mid_spacing"
        android:background="#888" />

    <RadioGroup
        android:id="@+id/rgQuestion7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ema_mid_spacing">

        <RadioButton
            android:id="@+id/rbLocationhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_home" />

        <RadioButton
            android:id="@+id/rbLocationwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_work" />

        <RadioButton
            android:id="@+id/rbLocationrestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_restaurant" />

        <RadioButton
            android:id="@+id/rbLocationvehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_vehicle" />

        <RadioButton
            android:id="@+id/rbLocationother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_other" />

    </RadioGroup>

</LinearLayout>